Remove unused resources and add TLS decryption help

--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -29,7 +29,7 @@
             android:icon="@drawable/ic_telegram" />
         <item
             android:id="@+id/action_open_github"
-            android:title="@string/open_github"
+            android:title="@string/source_code"
             android:icon="@drawable/ic_github" />
 
         <item
