--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -70,16 +70,25 @@
             app:key="tls_proxy_port"
             app:title="@string/tls_proxy_port"
             app:iconSpaceReserved="false"
-            app:defaultValue="@string/default_proxy_port"
+            app:defaultValue="8080"
             app:useSimpleSummaryProvider="true" />
     </PreferenceCategory>
 
-    <PreferenceCategory app:title="@string/vpn_prefs" app:iconSpaceReserved="false">
+    <PreferenceCategory app:title="@string/other_prefs" app:iconSpaceReserved="false">
         <SwitchPreference
             app:key="ipv6_enabled"
             app:title="@string/enable_ipv6"
             app:iconSpaceReserved="false"
             app:summary="@string/enable_ipv6_summary"
             app:defaultValue="false" />
+
+        <DropDownPreference
+            app:key="app_language"
+            app:title="@string/app_language"
+            android:entries="@array/app_languages_labels"
+            android:entryValues="@array/app_languages"
+            app:iconSpaceReserved="false"
+            app:defaultValue="system"
+            app:useSimpleSummaryProvider="true"/>
     </PreferenceCategory>
 </PreferenceScreen>
