--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -22,8 +22,8 @@
     </string-array>
 
     <string-array name="app_languages">
-        <item>system</item>
-        <item>english</item>
+        <item>系统</item>
+        <item>英语</item>
     </string-array>
 
     <string-array name="app_languages_labels">
