--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -24,7 +24,7 @@
         <item>english</item>
     </string-array>
     <string-array name="app_languages_labels">
-        <item>@string/lang_system_default</item>
+        <item>@string/system_default</item>
         <item>@string/lang_english</item>
     </string-array>
 
@@ -34,7 +34,7 @@
         <item>dark</item>
     </string-array>
     <string-array name="app_theme_labels">
-        <item>@string/lang_system_default</item>
+        <item>@string/system_default</item>
         <item>@string/theme_light</item>
         <item>@string/theme_dark</item>
     </string-array>
