Implement SOCKS5 proxy support
When enabled, all the TCP connections will be redirected to a SOCKS5
proxy. This also removes the need to use a customized mitmproxy to
perform the TLS decryption.

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -43,12 +43,12 @@
             app:useSimpleSummaryProvider="true" />
     </PreferenceCategory>
 
-    <PreferenceCategory app:title="@string/tls_decryption" app:iconSpaceReserved="false">
+    <PreferenceCategory app:title="@string/proxy" app:iconSpaceReserved="false">
         <SwitchPreference
             app:key="tls_decryption_enabled"
-            app:title="@string/enable_tls_decryption"
+            app:title="@string/enable_socks5_proxy"
             app:iconSpaceReserved="false"
-            app:summary="@string/enable_tls_decryption_summary"
+            app:summary="@string/enable_socks5_proxy_summary"
             app:defaultValue="false" />
 
         <Preference
@@ -60,15 +60,15 @@
         </Preference>
 
         <EditTextPreference
-            app:key="tls_proxy_ip_address"
-            app:title="@string/tls_proxy_ip_address"
+            app:key="socks5_proxy_ip_address"
+            app:title="@string/proxy_ip_address"
             app:defaultValue="0.0.0.0"
             app:iconSpaceReserved="false"
             app:useSimpleSummaryProvider="true" />
 
         <EditTextPreference
-            app:key="tls_proxy_port"
-            app:title="@string/tls_proxy_port"
+            app:key="socks5_proxy_port"
+            app:title="@string/proxy_port"
             app:iconSpaceReserved="false"
             app:defaultValue="8080"
             app:useSimpleSummaryProvider="true" />
