--- a/app/src/main/res/layout/about_activity.xml
+++ b/app/src/main/res/layout/about_activity.xml
@@ -49,7 +49,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginTop="20dp"
             android:autoLink="email"
-            android:text="@string/about_copyright"/>
+            android:text="Copyright (C) 2020-21 - Emanuele Faranda black.silver@hotmail.it"/>
 
         <TextView
             android:id="@+id/app_no_warranty"
