--- a/app/src/main/res/layout/connection_item.xml
+++ b/app/src/main/res/layout/connection_item.xml
@@ -33,10 +33,15 @@
             android:id="@+id/app_name"
             android:textStyle="bold"
             android:textSize="14sp"
+            app:layout_constrainedWidth="true"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/status_ind"
+            app:layout_constraintHorizontal_bias="0"
             tools:text="Android" />
 
         <TextView
