--- a/app/src/main/res/layout/activity_connection_details.xml
+++ b/app/src/main/res/layout/activity_connection_details.xml
@@ -148,6 +148,25 @@
     </TableRow>
 
     <TableRow
+        android:id="@+id/detail_proxy_row"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25"
+            android:textStyle="bold"
+            android:text="@string/proxy" />
+        <TextView
+            android:id="@+id/detail_proxy"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.75"
+            android:textIsSelectable="true"
+            tools:text="example.com" />
+    </TableRow>
+
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
