--- a/app/src/main/res/layout/activity_connection_details.xml
+++ b/app/src/main/res/layout/activity_connection_details.xml
@@ -131,7 +131,8 @@
     <TableRow
         android:id="@+id/detail_url_row"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="0dp"
+        android:layout_marginBottom="4dp">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
