HTTP requests data is now shown in the details
Also move to the material theme

Closes #38

--- a/app/src/main/res/layout/connection_item.xml
+++ b/app/src/main/res/layout/connection_item.xml
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         android:layout_margin="2dp"
         tools:src="@drawable/ic_apps"
-        tools:tint="@color/colorAccent" />
+        tools:tint="?attr/colorAccent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
