--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorTab">#7A5EBC</color>
+    <color name="colorTabText">@android:color/tertiary_text_light</color>
+    <color name="colorTabTextSelected">@android:color/secondary_text_light</color>
     <color name="colorPrimary">#512da8</color>
     <color name="colorPrimaryDark">#361e73</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorBackgroundGray">#2C000000</color>
+    <color name="navViewBackground">@color/design_default_color_surface</color>
+    <color name="backgroundColor">@color/background_material_light</color>
+    <color name="drawerItemColor">#404040</color>
 </resources>
