--- a/app/src/main/res/layout/connections.xml
+++ b/app/src/main/res/layout/connections.xml
@@ -45,6 +45,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
+        android:backgroundTint="@color/colorAccent"
+        app:tint="@null"
         app:maxImageSize="48dp"
         android:src="@drawable/ic_arrow_drop_down" />
 </RelativeLayout>
