--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -34,6 +34,8 @@
             android:id="@+id/tablayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:tabTextColor="@color/colorTabText"
+            app:tabSelectedTextColor="@color/colorTabTextSelected"
             app:tabIndicatorColor="@color/colorTab"
             app:tabMaxWidth="0dp"
             app:tabGravity="fill" />
