--- a/app/src/main/res/layout/connections.xml
+++ b/app/src/main/res/layout/connections.xml
@@ -22,7 +22,8 @@
         <TextView
             android:id="@+id/no_connections"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:gravity="center_horizontal"
             android:layout_marginTop="40dp"
             android:textStyle="italic"
@@ -33,7 +34,8 @@
         <com.emanuelef.remote_capture.views.EmptyRecyclerView
             android:id="@+id/connections_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:scrollbars="vertical"
             android:scrollbarStyle="outsideOverlay"
             android:fillViewport="true" />
