--- a/app/src/main/res/layout/whitelist_activity.xml
+++ b/app/src/main/res/layout/whitelist_activity.xml
@@ -2,11 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingTop="8dp">
+    android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/list"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/whitelist_fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
