--- a/app/src/main/res/layout/whitelist_item.xml
+++ b/app/src/main/res/layout/whitelist_item.xml
@@ -1,25 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- For some unknown reason, on some devices using a LinearLayout causes each row not to take all
-     the available space when the scrollbar is shown. -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackground"
-    android:padding="12sp">
+    android:background="?android:attr/activatedBackgroundIndicator"
+    android:orientation="vertical"
+    android:padding="15sp">
 
     <TextView
         android:id="@+id/item_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="App: example app"
-        android:gravity="center_vertical"
-        android:layout_toStartOf="@id/item_icon" />
-
-    <ImageView
-        android:id="@+id/item_icon"
-        android:src="@drawable/ic_delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"/>
-</RelativeLayout>
+        android:gravity="center_vertical" />
+</LinearLayout>
