Implement ability yo search connections
Through the search bar is now possible to search connections by host,
IP, protocol, uid, app name or package name.

Closes #67

--- a/app/src/main/res/menu/connection_context_menu.xml
+++ b/app/src/main/res/menu/connection_context_menu.xml
@@ -36,9 +36,13 @@
         </menu>
     </item>
 
-    <!-- TODO -->
-    <item android:title="@string/search" android:visible="false">
+    <item android:title="@string/search">
         <menu>
+            <item
+                android:id="@+id/search_app"
+                android:title=""
+                tools:title="@string/app_val" />
+
             <item
                 android:id="@+id/search_ip"
                 android:title=""
