Implement app details
Show information about an app, including its target SDK version,
install/update date and its requested permissions. Also add a button to
quickly open the app info/settings in android.

Closes #45

--- a/app/src/main/res/layout/app_item.xml
+++ b/app/src/main/res/layout/app_item.xml
@@ -5,6 +5,7 @@
     android:background="?attr/selectableItemBackground"
     android:orientation="horizontal"
     android:paddingHorizontal="4dp"
+    android:paddingVertical="2dp"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -28,7 +29,7 @@
         android:layout_width="8sp"
         android:layout_height="fill_parent"
         android:layout_weight="0.2"
-        android:text="1.05 MB"
+        tools:text="1.05 MB"
         android:gravity="center_vertical|end"
         android:id="@+id/traffic"/>
 </LinearLayout>
