--- a/app/src/main/res/layout/fragment_activity.xml
+++ b/app/src/main/res/layout/fragment_activity.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/apps_fragment"
+        android:id="@+id/fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
